force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/Forrester_SHIR_AGREEMENT_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_AGREEMENT_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_AGREEMENT_VIEW</externalName>
    <label>Agreement</label>
    <pluralLabel>Agreements</pluralLabel>
</CustomObject>