force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/ADDRESS_1__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS_1__c</fullName>
    <description>ADDRESS_1</description>
    <externalDeveloperName>ADDRESS_1</externalDeveloperName>
    <label>Address 1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>