force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/ADDRESS_2__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS_2__c</fullName>
    <description>ADDRESS_2</description>
    <externalDeveloperName>ADDRESS_2</externalDeveloperName>
    <label>Address 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>