force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_EFFECTIVE_DT__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_EFFECTIVE_DT__c</fullName>
    <description>AGREEMENT_EFFECTIVE_DT</description>
    <externalDeveloperName>AGREEMENT_EFFECTIVE_DT</externalDeveloperName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>