force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_EXCLUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_EXCLUS_CODE__c</fullName>
    <description>AGREEMENT_EXCLUS_CODE</description>
    <externalDeveloperName>AGREEMENT_EXCLUS_CODE</externalDeveloperName>
    <label>Exclusive Flag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>