force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_FOLLOW_ON_FLAG__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_FOLLOW_ON_FLAG__c</fullName>
    <description>AGREEMENT_FOLLOW_ON_FLAG</description>
    <externalDeveloperName>AGREEMENT_FOLLOW_ON_FLAG</externalDeveloperName>
    <label>Follow On Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>