force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_MAX_REIMB_AMT__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_MAX_REIMB_AMT__c</fullName>
    <description>AGREEMENT_MAX_REIMB_AMT</description>
    <externalDeveloperName>AGREEMENT_MAX_REIMB_AMT</externalDeveloperName>
    <label>Max Reimbursement Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>