force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_NUM__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_NUM__c</fullName>
    <description>AGREEMENT_NUM</description>
    <externalDeveloperName>AGREEMENT_NUM</externalDeveloperName>
    <label>Forrester Agr Num (don&apos;t use in Shirley)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>