force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_RR_PARAG_NUM__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_RR_PARAG_NUM__c</fullName>
    <description>AGREEMENT_RR_PARAG_NUM</description>
    <externalDeveloperName>AGREEMENT_RR_PARAG_NUM</externalDeveloperName>
    <label>Royalty Paragraph Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>