force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_SIGN_DT__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_SIGN_DT__c</fullName>
    <description>AGREEMENT_SIGN_DT</description>
    <externalDeveloperName>AGREEMENT_SIGN_DT</externalDeveloperName>
    <label>Signed</label>
    <type>Date</type>
</CustomField>