force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_STARTUP_FLAG__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_STARTUP_FLAG__c</fullName>
    <description>AGREEMENT_STARTUP_FLAG</description>
    <externalDeveloperName>AGREEMENT_STARTUP_FLAG</externalDeveloperName>
    <label>Startup Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>