force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_STATUS__c</fullName>
    <description>AGREEMENT_STATUS</description>
    <externalDeveloperName>AGREEMENT_STATUS</externalDeveloperName>
    <label>Status Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>