force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AGREEMENT_TERRITORY__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TERRITORY__c</fullName>
    <description>AGREEMENT_TERRITORY</description>
    <externalDeveloperName>AGREEMENT_TERRITORY</externalDeveloperName>
    <label>Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>