force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AMENDMENT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>AMENDMENT_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AMENDMENT_FLAG</description>
    <externalDeveloperName>AMENDMENT_FLAG</externalDeveloperName>
    <label>Amendment</label>
    <type>Checkbox</type>
</CustomField>