force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/ANTI_DILUTION_EQUITY_PCT__c.field-meta.xml
<CustomField>
    <fullName>ANTI_DILUTION_EQUITY_PCT__c</fullName>
    <description>ANTI_DILUTION_EQUITY_PCT</description>
    <externalDeveloperName>ANTI_DILUTION_EQUITY_PCT</externalDeveloperName>
    <label>Anti Dilution Equity Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>