force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/ANTI_DILUTION_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ANTI_DILUTION_FLAG__c</fullName>
    <description>ANTI_DILUTION_FLAG</description>
    <externalDeveloperName>ANTI_DILUTION_FLAG</externalDeveloperName>
    <label>Anti Dilution Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>