force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/ANTI_DILUTION_FUND_THRESHOLD__c.field-meta.xml
<CustomField>
    <fullName>ANTI_DILUTION_FUND_THRESHOLD__c</fullName>
    <description>ANTI_DILUTION_FUND_THRESHOLD</description>
    <externalDeveloperName>ANTI_DILUTION_FUND_THRESHOLD</externalDeveloperName>
    <label>Anti Dilution Fund Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>