force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/AR_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>AR_COMMENT__c</fullName>
    <description>AR_COMMENT</description>
    <externalDeveloperName>AR_COMMENT</externalDeveloperName>
    <label>AR Comment</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>