force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/CASE_LIST__c.field-meta.xml
<CustomField>
    <fullName>CASE_LIST__c</fullName>
    <description>CASE_LIST</description>
    <externalDeveloperName>CASE_LIST</externalDeveloperName>
    <label>Case List</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>