force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <description>CITY</description>
    <externalDeveloperName>CITY</externalDeveloperName>
    <label>City</label>
    <length>45</length>
    <type>Text</type>
</CustomField>