force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/COMMERCIALIZED_DATE__c.field-meta.xml
<CustomField>
    <fullName>COMMERCIALIZED_DATE__c</fullName>
    <description>COMMERCIALIZED_DATE</description>
    <externalDeveloperName>COMMERCIALIZED_DATE</externalDeveloperName>
    <label>Commercialized Date</label>
    <type>DateTime</type>
</CustomField>