force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/COMMERCIALIZED_FLAG__c.field-meta.xml
<CustomField>
    <fullName>COMMERCIALIZED_FLAG__c</fullName>
    <description>COMMERCIALIZED_FLAG</description>
    <externalDeveloperName>COMMERCIALIZED_FLAG</externalDeveloperName>
    <label>Commercialized Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>