force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <description>COUNTRY</description>
    <externalDeveloperName>COUNTRY</externalDeveloperName>
    <label>Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>