force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/CRDR_COUNT__c.field-meta.xml
<CustomField>
    <fullName>CRDR_COUNT__c</fullName>
    <description>CRDR_COUNT</description>
    <externalDeveloperName>CRDR_COUNT</externalDeveloperName>
    <label>CRDR(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>