force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/EDISON_UTILIZATION_EXPORT_DATE__c.field-meta.xml
<CustomField>
    <fullName>EDISON_UTILIZATION_EXPORT_DATE__c</fullName>
    <description>EDISON_UTILIZATION_EXPORT_DATE</description>
    <externalDeveloperName>EDISON_UTILIZATION_EXPORT_DATE</externalDeveloperName>
    <label>Edison Utilization Export Date</label>
    <type>DateTime</type>
</CustomField>