force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/EQUITY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>EQUITY_FLAG__c</fullName>
    <description>EQUITY_FLAG</description>
    <externalDeveloperName>EQUITY_FLAG</externalDeveloperName>
    <label>Equity Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>