force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/FIELD_OF_USE__c.field-meta.xml
<CustomField>
    <fullName>FIELD_OF_USE__c</fullName>
    <description>FIELD_OF_USE</description>
    <externalDeveloperName>FIELD_OF_USE</externalDeveloperName>
    <label>Field of Use</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>