force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/INTEREST_CHARGE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_CHARGE_TYPE__c</fullName>
    <description>INTEREST_CHARGE_TYPE</description>
    <externalDeveloperName>INTEREST_CHARGE_TYPE</externalDeveloperName>
    <label>Interest Charge Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>