force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/INTEREST_CODE__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_CODE__c</fullName>
    <description>INTEREST_CODE</description>
    <externalDeveloperName>INTEREST_CODE</externalDeveloperName>
    <label>Interest Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>