force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/INTEREST_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_COMMENT__c</fullName>
    <description>INTEREST_COMMENT</description>
    <externalDeveloperName>INTEREST_COMMENT</externalDeveloperName>
    <label>Interest Comment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>