force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/INTEREST_FLAG__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_FLAG__c</fullName>
    <description>INTEREST_FLAG</description>
    <externalDeveloperName>INTEREST_FLAG</externalDeveloperName>
    <label>Interest Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>