force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/INTEREST_FLAT_RATE__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_FLAT_RATE__c</fullName>
    <description>INTEREST_FLAT_RATE</description>
    <externalDeveloperName>INTEREST_FLAT_RATE</externalDeveloperName>
    <label>Interest Flat Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>