force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/INTEREST_PRIME_FACTOR__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_PRIME_FACTOR__c</fullName>
    <description>INTEREST_PRIME_FACTOR</description>
    <externalDeveloperName>INTEREST_PRIME_FACTOR</externalDeveloperName>
    <label>Interest Prime Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>