force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/INVOICE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_DESCRIPTION__c</fullName>
    <description>INVOICE_DESCRIPTION</description>
    <externalDeveloperName>INVOICE_DESCRIPTION</externalDeveloperName>
    <label>Invoice Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>