force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/LAST_BILLING_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_BILLING_DATE__c</fullName>
    <description>LAST_BILLING_DATE</description>
    <externalDeveloperName>LAST_BILLING_DATE</externalDeveloperName>
    <label>Last Billing Date</label>
    <type>DateTime</type>
</CustomField>