force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/LICENSING_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>LICENSING_SOURCE__c</fullName>
    <description>LICENSING_SOURCE</description>
    <externalDeveloperName>LICENSING_SOURCE</externalDeveloperName>
    <label>Licensing Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>