force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/LICENSING_SOURCE_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>LICENSING_SOURCE_COMMENT__c</fullName>
    <description>LICENSING_SOURCE_COMMENT</description>
    <externalDeveloperName>LICENSING_SOURCE_COMMENT</externalDeveloperName>
    <label>Licensing Source Comment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>