force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/MAX_MAINTENANCE_AMT__c.field-meta.xml
<CustomField>
    <fullName>MAX_MAINTENANCE_AMT__c</fullName>
    <description>MAX_MAINTENANCE_AMT</description>
    <externalDeveloperName>MAX_MAINTENANCE_AMT</externalDeveloperName>
    <label>Max Maintenance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>