force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/MAX_PROSECUTION_AMT__c.field-meta.xml
<CustomField>
    <fullName>MAX_PROSECUTION_AMT__c</fullName>
    <description>MAX_PROSECUTION_AMT</description>
    <externalDeveloperName>MAX_PROSECUTION_AMT</externalDeveloperName>
    <label>Max Prosecution Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>