force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/MINIMUM_DUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>MINIMUM_DUE_DATE__c</fullName>
    <description>MINIMUM_DUE_DATE</description>
    <externalDeveloperName>MINIMUM_DUE_DATE</externalDeveloperName>
    <label>Minimum Due Date</label>
    <type>DateTime</type>
</CustomField>