force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>POSTAL_CODE__c</fullName>
    <description>POSTAL_CODE</description>
    <externalDeveloperName>POSTAL_CODE</externalDeveloperName>
    <label>Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>