force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/PRIMARY_TLO_RECID__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_TLO_RECID__c</fullName>
    <description>PRIMARY_TLO_RECID</description>
    <externalDeveloperName>PRIMARY_TLO_RECID</externalDeveloperName>
    <label>Primary TLO Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>