force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/PRIVATE_OFFERING_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PRIVATE_OFFERING_FLAG__c</fullName>
    <description>PRIVATE_OFFERING_FLAG</description>
    <externalDeveloperName>PRIVATE_OFFERING_FLAG</externalDeveloperName>
    <label>Private Offering Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>