force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/PUNITIVE_ADJUSTMENT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PUNITIVE_ADJUSTMENT_FLAG__c</fullName>
    <description>PUNITIVE_ADJUSTMENT_FLAG</description>
    <externalDeveloperName>PUNITIVE_ADJUSTMENT_FLAG</externalDeveloperName>
    <label>Punitive Adjustment Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>