force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/REVIEWING_FY__c.field-meta.xml
<CustomField>
    <fullName>REVIEWING_FY__c</fullName>
    <description>REVIEWING_FY</description>
    <externalDeveloperName>REVIEWING_FY</externalDeveloperName>
    <label>Reviewing FY</label>
    <length>4</length>
    <type>Text</type>
</CustomField>