force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/ROYALTY_YEAR_BEGIN_DATE__c.field-meta.xml
<CustomField>
    <fullName>ROYALTY_YEAR_BEGIN_DATE__c</fullName>
    <description>ROYALTY_YEAR_BEGIN_DATE</description>
    <externalDeveloperName>ROYALTY_YEAR_BEGIN_DATE</externalDeveloperName>
    <label>Royalty Year Begin Date</label>
    <type>DateTime</type>
</CustomField>