force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/SAP_WBS_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_ID__c</fullName>
    <description>SAP_WBS_ID</description>
    <externalDeveloperName>SAP_WBS_ID</externalDeveloperName>
    <label>SAP WBS ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>