force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/SECONDARY_TLO_RECID__c.field-meta.xml
<CustomField>
    <fullName>SECONDARY_TLO_RECID__c</fullName>
    <description>SECONDARY_TLO_RECID</description>
    <externalDeveloperName>SECONDARY_TLO_RECID</externalDeveloperName>
    <label>Secondary TLO Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>