force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <description>STATE</description>
    <externalDeveloperName>STATE</externalDeveloperName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>