force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TECH_TRANSFER_SURCHARGE__c.field-meta.xml
<CustomField>
    <fullName>TECH_TRANSFER_SURCHARGE__c</fullName>
    <description>TECH_TRANSFER_SURCHARGE</description>
    <externalDeveloperName>TECH_TRANSFER_SURCHARGE</externalDeveloperName>
    <label>Tech Transfer Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>