force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TLO_PRIMARY__c.field-meta.xml
<CustomField>
    <fullName>TLO_PRIMARY__c</fullName>
    <description>TLO_PRIMARY</description>
    <externalDeveloperName>TLO_PRIMARY</externalDeveloperName>
    <label>Primary TLO</label>
    <length>40</length>
    <type>Text</type>
</CustomField>