force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TLO_PRIMARY_ID__c.field-meta.xml
<CustomField>
    <fullName>TLO_PRIMARY_ID__c</fullName>
    <description>TLO_PRIMARY_ID</description>
    <externalDeveloperName>TLO_PRIMARY_ID</externalDeveloperName>
    <label>Primary TLO Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>