force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TLO_SECONDARY__c.field-meta.xml
<CustomField>
    <fullName>TLO_SECONDARY__c</fullName>
    <description>TLO_SECONDARY</description>
    <externalDeveloperName>TLO_SECONDARY</externalDeveloperName>
    <label>Secondary TLO</label>
    <length>40</length>
    <type>Text</type>
</CustomField>