force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TLO_SECONDARY_ID__c.field-meta.xml
<CustomField>
    <fullName>TLO_SECONDARY_ID__c</fullName>
    <description>TLO_SECONDARY_ID</description>
    <externalDeveloperName>TLO_SECONDARY_ID</externalDeveloperName>
    <label>Secondary TLO Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>