force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TRADEMARK_PRODUCT_CLASS__c.field-meta.xml
<CustomField>
    <fullName>TRADEMARK_PRODUCT_CLASS__c</fullName>
    <description>TRADEMARK_PRODUCT_CLASS</description>
    <externalDeveloperName>TRADEMARK_PRODUCT_CLASS</externalDeveloperName>
    <label>Trademark Product Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>