force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TRADEMARK_RENEWAL_FLAG__c.field-meta.xml
<CustomField>
    <fullName>TRADEMARK_RENEWAL_FLAG__c</fullName>
    <description>TRADEMARK_RENEWAL_FLAG</description>
    <externalDeveloperName>TRADEMARK_RENEWAL_FLAG</externalDeveloperName>
    <label>Trademark Renewal Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>