force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/TYPE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>TYPE_DESCRIPTION__c</fullName>
    <description>TYPE_DESCRIPTION</description>
    <externalDeveloperName>TYPE_DESCRIPTION</externalDeveloperName>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>