force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/US_WAIVER_GRANTED_DATE__c.field-meta.xml
<CustomField>
    <fullName>US_WAIVER_GRANTED_DATE__c</fullName>
    <description>US_WAIVER_GRANTED_DATE</description>
    <externalDeveloperName>US_WAIVER_GRANTED_DATE</externalDeveloperName>
    <label>US Waiver Grant Date</label>
    <type>DateTime</type>
</CustomField>