force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/fields/WHITEHEAD_FLAG__c.field-meta.xml
<CustomField>
    <fullName>WHITEHEAD_FLAG__c</fullName>
    <description>WHITEHEAD_FLAG</description>
    <externalDeveloperName>WHITEHEAD_FLAG</externalDeveloperName>
    <label>Whitehead Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>