force-app/main/default/objects/Forrester_SHIR_AGREEMENT_VIEW__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AGREEMENT_RECID__c</columns>
    <columns>COMPANY_NAME__c</columns>
    <columns>TYPE_DESCRIPTION__c</columns>
    <columns>AGREEMENT_SIGN_DT__c</columns>
    <columns>AGREEMENT_EFFECTIVE_DT__c</columns>
    <columns>AGREEMENT_END_DT__c</columns>
    <columns>STATUS_DESCRIPTION__c</columns>
    <columns>EQUITY_FLAG__c</columns>
    <columns>TLO_PRIMARY__c</columns>
    <columns>CRDR_COUNT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>